--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"  style="height: 100%; width: 100%;margin: 0">
 <head>
   <meta charset="utf-8">
   <title>VavilonAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    ::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px RGBA(128,74,183,0.62);
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: #7a7872;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+  </style>
 </head>
-<body>
-  <app-root></app-root>
+<body class="mat-typography" style="height: 100%; width: 100%;margin: 0">
+<app-root></app-root>
 </body>
 </html>
