--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"  style="height: 100%; width: 100%;margin: 0">
+<html lang="en" style="height: 100%; width: 100%;margin: 0">
 <head>
   <meta charset="utf-8">
   <title>VavilonAngular</title>
@@ -16,14 +16,14 @@
     }
 
     ::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px RGBA(128,74,183,0.62);
+      -webkit-box-shadow: inset 0 0 6px RGBA(128, 74, 183, 0.62);
       border-radius: 10px;
     }
 
     ::-webkit-scrollbar-thumb {
       border-radius: 10px;
       background-color: #7a7872;
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
 
   </style>
